# mkdocs-flux

./: LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml
about/: index.html
docs/: about.md  index.md  refs.bib
docs/javascripts/: mathjax.js
docs/manual/: basics.md  bibtex.md  markdown.md
docs/usage/: docstring.md  markdown.md  notebook.ipynb  pymdownx.md  setup.md
mkdocs_flux/: __init__.py  base.html  mkdocs_theme.yml  nav.html  tab.html
mkdocs_flux/css/: theme.css
usage/bibtex/: index.html
usage/docstring/: index.html
usage/markdown/: index.html
usage/pymdownx/: index.html
usage/setup/: index.html
