[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-flux"
authors = [
  { name="Yunqi Shao",email="yunqi_shao@yahoo.com" },
]
description = "Flux: A minimalistic mkdocs theme"
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["mkdocs>=1.5"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pygments==2.16.1",
  "pymdown-extensions==10.3.1",
  "mkdocs-bibtex==2.11.0 ",
  "mkdocstrings[python]==0.23.0",
  "pypandoc_binary==1.12",
  "mknotebooks==0.8.0",
]

[project.entry-points."mkdocs.themes"]
flux = "mkdocs_flux"

[project.urls]
"Homepage" = "https://github.com/yqshao/mkdocs-flux"
"Bug Tracker" = "https://github.com/yqshao/mkdocs-flux/issues"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.version]
path = "mkdocs_flux/__init__.py"
